[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scenes/UIElements/UILayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Cut Scenes/story_frame0.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Tile.gd" type="Script" id=3]
[ext_resource path="res://assets/Cut Scenes/story_frame1.png" type="Texture" id=4]
[ext_resource path="res://assets/Cut Scenes/story_frame2.png" type="Texture" id=5]
[ext_resource path="res://Scenes/UIv2/Label.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/UIElements/PlaneSpin.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="SpriteFrames" id=46]
animations = [ {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 640, 340 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 640, 340 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 1280, 0, 640, 340 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 0, 340, 640, 340 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 640, 340, 640, 340 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 1280, 340, 640, 340 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 0, 680, 640, 340 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 640, 680, 640, 340 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 1280, 680, 640, 340 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 0, 1020, 640, 340 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 640, 1020, 640, 340 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 1280, 1020, 640, 340 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 0, 1360, 640, 340 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 640, 1360, 640, 340 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 1280, 1360, 640, 340 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 0, 1700, 640, 340 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 640, 1700, 640, 340 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": false,
"name": "default",
"speed": 4.0
} ]

[node name="Tile" type="Node2D"]
script = ExtResource( 3 )

[node name="UILayer" parent="." instance=ExtResource( 1 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 0
follow_viewport_enable = true

[node name="Skyscape" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 0.5 )
motion_offset = Vector2( -314, 500 )

[node name="Mountainscape0" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.9, 0.75 )
motion_offset = Vector2( -210, 700 )

[node name="Mountainscape1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 0.75 )
motion_offset = Vector2( -210, 720 )

[node name="Mountainscape2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.1, 0.75 )
motion_offset = Vector2( -210, 740 )

[node name="Mountainscape3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.2, 0.75 )
motion_offset = Vector2( -210, 760 )

[node name="Foreground" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Entities" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="LoadLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="LoadLayer"]
margin_right = 1000.0
margin_bottom = 500.0
color = Color( 0.054902, 0.054902, 0.0627451, 1 )

[node name="StoryFrame0" type="AnimatedSprite" parent="LoadLayer/ColorRect"]
position = Vector2( -31, 5.96046e-08 )
scale = Vector2( 3.5, 3.5 )
frames = SubResource( 46 )
centered = false

[node name="StoryFrame1" type="AnimatedSprite" parent="LoadLayer/ColorRect"]
position = Vector2( 142, 46 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 25 )
centered = false

[node name="StoryFrame2" type="Sprite" parent="LoadLayer/ColorRect"]
position = Vector2( 597, 83 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 5 )
centered = false

[node name="PlaneSpin" parent="LoadLayer/ColorRect/StoryFrame2" instance=ExtResource( 7 )]
position = Vector2( 61, 51 )
scale = Vector2( 2, 2 )
speed = 10

[node name="Label" parent="LoadLayer/ColorRect" instance=ExtResource( 6 )]
margin_top = 464.0
margin_right = 333.0
margin_bottom = 472.0
rect_scale = Vector2( 3, 3 )
text = "Press any key to continue"
align = 1
flat = true
flash = true
isvisible = false
